update-manager (1:0.156.7) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix nvidia detection, thanks to Brian Murray
  * DistUpgrade/xorg_fix_proprietary.py:
    - fix crash when apt_pkg is not initialized (LP: #942106)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100

update-manager (1:0.156.6) precise; urgency=low

  [ Robert Roth ]  
  * lp:~evfool/update-manager/lp930177:
    - Add missing space (LP: #930177) 
  
  [ Michael Vogt ]
  * DistUpgrade/DevelReleaseAnnouncement:
    - change label from alpha to beta release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Feb 2012 16:44:50 +0100

update-manager (1:0.156.5) precise; urgency=low

  [ Brian Murray ]
  * do-release-upgrade: capitalize U in ubuntu
  * debian/source_update-manager.py: add screenlog.0 from
    /var/log/dist-upgrade to apport bug reports

  [ Marc Deslauriers ]
  * DistUpgrade/DistUpgradeViewKDE.py: fix regression caused by improper
    return value handling. (LP: #933225)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Feb 2012 17:30:58 +0100

update-manager (1:0.156.4) precise; urgency=low

  * DistUpgrade/DistUpgrade.cfg.lucid:
    - Update libapt-pkg and libapt-inst versions.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Feb 2012 11:35:42 +0000

update-manager (1:0.156.3) precise; urgency=low

  [ Jean-Baptiste Lallement ]
  * lp:~jibel/update-manager/AutoUpgradeTester-desktoptests:
    New tests for Ubuntu Desktop LTS upgrade:
    * autologin check
    * user settings check: wallpaper, theme, keyboard layout, custom 
      launchers (desktop and panel)
  * lp:~jibel/update-manager/AutoUpgradeTester-portlocking:
    - automatically allocate free ssh/vnc ports

  [ Colin Watson ]
  * Clean up a few pyflakes warnings.
  * DistUpgrade/DistUpgradeMain.py
    - Make sure main.log is actually created.
  * DistUpgrade/removal_blacklist.cfg:
    - Only blacklist unity, not all packages whose names start with unity.
  