@@ -8,6 +8,10 @@ ftp://security.ubuntu.com/ubuntu/
 http://archive.canonical.com
 http://archive.canonical.com/ubuntu/
 
+#commercial-ppas
+https://private-ppa.launchpad.net/commercial-ppa-uploaders
+
+
 # random german mirror
 http://ftp.inf.tu-dresden.de/os/linux/dists/ubuntu/
 
