@@ -1,5 +1,5 @@
 
-deb http://localhost:9977/security.ubuntu.com/ubuntu feisty-security main restricted 
+deb http://localhost:9977/security.ubuntu.com/ubuntu feisty-security main restricted universe multiverse
 deb http://localhost:9977/archive.canonical.com/ubuntu feisty partner
 deb http://localhost:9977/us.archive.ubuntu.com/ubuntu/ feisty main
 deb http://localhost:9977/archive.ubuntu.com/ubuntu/ feisty main
