@@ -4,6 +4,9 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
     - fix nvidia detection, thanks to Brian Murray
   * DistUpgrade/xorg_fix_proprietary.py:
     - fix crash when apt_pkg is not initialized (LP: #942106)
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/mirrors.cfg:
+    - support upgrades with commercial-ppas in the sources.list
+      (LP: #939461) and add tests
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
 
